# macro-key-config

./: Cargo.toml  README.md
arduino/: macrokeypad-v2.ino
arduino/libraries/HID-Project-RawHID/src/: HID-Project-RawHID.h
src/: hid_service.rs  keyvalues.rs  main.rs
ui/: appwindow.slint
