[package]
name = "macro-key-config"
version = "0.1.0"
authors = ["Felipe Furst"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.6.1"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"